# custom-type-example

./: Cargo.toml  README.md  diesel.toml
migrations/2024-10-24-195725_create_users_table/: down.sql  up.sql
src/: code.rs  main.rs  schema.rs
