[package]
name = "custom-type-example"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["postgres", "pq-src", "uuid"] }
diesel-async = { version = "0.5.0", features = ["postgres"] }
rand = "0.8.5"
once_cell = "1.20.2"
uuid = "1.11.0"
dotenvy = "0.15.7"
tokio = { version = "1.40", features = ["macros"] }
